﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################
opsi-winst/opsi-script (4.12.0.28) stable; urgency=low

  * osconf: (fix): get ScriptErrorMessages, AutoActivityDisplay
  * osparser: move log message 'line is starting with' to log_prog
  * osinteractivegui: radiobutton 'NewFile' visible
  * osinteractivegui: at execute viewlist: use CreateTheLogfile
  * osinteractivegui: at execute_button: use CreateTheLogfile
  * osparser: close log file after script finished
  * switch to lazarus 1.8.4.

-- Detlef Oertel <d.oertel@uib.de>  Fri, 14 Sep 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.27) stable; urgency=low

  * osparser: (fix) registry: new parameter /AllUsrClassDats
       new function doRegistryAllUsrClassDats ; fix from Terry Strooband (thank you)
       flag_all_usrclass

-- Detlef Oertel <d.oertel@uib.de>  Mon, 10 Sep 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.26) stable; urgency=low

  * osparser: more log_prog in folderlink and getstring
  * osparser: reporterror: catch unknown origin and exceptions ; references #3655
  * osparser: doAktionen: endif: catch exception in log message ; references #3655
  * osparser: execDosBatch: log8 temp file content
  * osparser: executeWith: log8 temp file content
  * osparser: execPowershellCall: log executing ; fixes #3621
  * osparser: doAktionen: registry: Ignoring parameter /32bit for /AllNTUserdats. ; fixes #3643
  * osjson: jsonAsArrayToStringList: "[true]" now results to "true" ; fixes #3627
  * oswebservice: createSocket: log openssl version
  * osfunclin: getLinuxDistroType: read /etc/os-release  ; fixes #3651
  * osparserhelper: GetOuterFunctionOrExp
  * OsDefinedFunction.parseCallParameter: handle functions as parameter ; fixes #3623
  * osparser: registerSectionOrigins: fix origin for external sub sections